[gd_scene load_steps=6 format=3 uid="uid://ddljddprr8uoc"]

[ext_resource type="Script" uid="uid://cvobq4ysf4tju" path="res://Scripts/Draft.gd" id="1_i3s6m"]
[ext_resource type="Texture2D" uid="uid://ba1nnaygd5fwk" path="res://Textures/Demo/Draft/draft.png" id="2_15vkl"]
[ext_resource type="Texture2D" uid="uid://7einxbr2u63s" path="res://Textures/Demo/Draft/Goblins/G1.png" id="3_by3ju"]
[ext_resource type="Texture2D" uid="uid://shcgjavp3c2x" path="res://Textures/Demo/Draft/Goblins/G2.png" id="4_svrhh"]
[ext_resource type="Texture2D" uid="uid://bjfifsyf7s1jv" path="res://Textures/Demo/Draft/Goblins/G3.png" id="5_gjawu"]

[node name="Draft" type="Node2D"]
script = ExtResource("1_i3s6m")
metadata/Group = "Draft"

[node name="Draft" type="Sprite2D" parent="."]
position = Vector2(572, 326)
scale = Vector2(0.469274, 0.469274)
texture = ExtResource("2_15vkl")
metadata/Group = "Draft"

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 35.0
offset_top = 236.0
offset_right = 366.0
offset_bottom = 639.0
texture_normal = ExtResource("3_by3ju")
ignore_texture_size = true
stretch_mode = 0
metadata/Group = "Draft"

[node name="TextureButton2" type="TextureButton" parent="."]
offset_left = 414.0
offset_top = 267.0
offset_right = 810.0
offset_bottom = 627.0
texture_normal = ExtResource("4_svrhh")
ignore_texture_size = true
stretch_mode = 0
metadata/Group = "Draft"

[node name="TextureButton3" type="TextureButton" parent="."]
offset_left = 868.0
offset_top = 152.0
offset_right = 1040.0
offset_bottom = 634.0
texture_normal = ExtResource("5_gjawu")
ignore_texture_size = true
stretch_mode = 0
metadata/Group = "Draft"

[connection signal="pressed" from="TextureButton" to="." method="_on_goblin_1_selected"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_goblin_2_selected"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_goblin_3_selected"]
